tablet ui and subtle spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,8 @@ nav {
     color: #4a4a4a;
     font-weight: 500;
     transition: color 0.3s ease;
+    padding: 1.5rem 0rem 1.5rem 0rem;
+    /* padding-bottom: 1rem; */
 }
 
 .nav-links a:hover {
@@ -143,7 +145,7 @@ nav {
 }
 
 /* Navbar Media */
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
     .nav-links {
         display: none;
     }
@@ -240,6 +242,7 @@ nav {
     font-weight: 700;
     display: block;
     text-align: left;
+    line-height: 1.1;
 }
 
 .stat-label {
@@ -275,7 +278,7 @@ nav {
     animation-delay: -4s;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
 
     .hero {
         padding-top: 9rem;
@@ -304,6 +307,44 @@ nav {
 
     .hero-visual {
         max-height: 50rem;
+    }
+}
+
+/* Tablet Media Hero Section*/
+@media (max-width: 820px) {
+
+    .hero {
+        padding-top: 12rem;
+    }
+    .hero-container {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .hero-content h1 {
+        font-size: 2.5rem;
+    }
+
+    .hero-stats {
+        justify-content: center;
+    }
+
+    .hero-visual {
+        max-height: 30rem;
+        margin-top: 2rem;
+    }
+
+    .stat-number {
+    font-size: 1em
+    }
+
+    .hero-visual {
+        max-height: 50rem;
+    }
+
+    .cta-buttons {
+        display: flex;
+        justify-content: center;
     }
 }
 
@@ -763,6 +804,7 @@ nav {
     position: relative;
     height: 300px;
     overflow: hidden;
+    /* background: white; */
 }
 
 .testimonial-card {
@@ -788,7 +830,7 @@ nav {
 .testimonial-content {
     background: #fefefd;
     border-radius: 20px;
-    padding: 3rem 2rem;
+    padding: 1rem 1rem;
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
     text-align: center;
     position: relative;
@@ -797,7 +839,6 @@ nav {
 .quote-icon {
     font-size: 3rem;
     color: #3db0ff;
-    margin-bottom: 1rem;
     opacity: 0.3;
 }
 
@@ -814,6 +855,7 @@ nav {
     align-items: center;
     justify-content: center;
     gap: 1rem;
+    margin-bottom: 1rem;
 }
 
 @media (max-width: 768px) {
@@ -1219,8 +1261,8 @@ nav {
 }
 
 .step-number {
-    width: 80px;
-    height: 80px;
+    width: 45px;
+    height: 45px;
     background: linear-gradient(135deg, #667eea 0%, #3db0ff 100%);
     border-radius: 50%;
     display: flex;
